add search functionality

--- a/templates/passwords/dashboard.html
+++ b/templates/passwords/dashboard.html
@@ -7,6 +7,12 @@
 {% block content %}
   <h2>Passwords</h2>
   
+  <form method="GET">
+    <input name="q" type="text" placeholder="Search for websites..."/>
+    <button type="submit">Search</button>
+  </form>
+  <br />
+
   <table>
     <tr>
       <th>Website Name</th>
