add view to delete password entry

--- a/templates/passwords/dashboard.html
+++ b/templates/passwords/dashboard.html
@@ -26,7 +26,7 @@
         <td>{{ password.website_name }}</td>
         <td>{{ password.website_address }}</td>
         <td><a href="#">Show Password</a></td>
-        <td><a href="#">Delete</a></td>
+        <td><a href="{% url 'delete-password' password.id %}">Delete</a></td>
       </tr>
     {% endfor %}
     
