--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,15 @@
   </head>
 
   <body>
+    <nav>
+      {% if user.is_authenticated %}
+        <a href="{% url 'dashboard' %}">Dashboard</a> |
+        <a href="{% url 'logout' %}">Logout</a>
+      {% else %}
+        <a href="{% url 'login' %}">Login</a> |
+        <a href="{% url 'register' %}">Register</a>
+      {% endif %}
+    </nav>
     {% block content %}{% endblock content %}
   </body>
 </html>
